--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
 
     <p>Raúl Alejandro Ocasio Ruiz, conocido artísticamente como <strong>Rauw Alejandro</strong>, es un cantautor, bailarín, actor, productor y empresario puertorriqueño. Nació el 10 de enero de 1993 en San Juan, Puerto Rico.</p>
 
-    <img src="IMG_7207 2.JPG" alt="Rauw alejandro de pequeño">
+    <img src="IMG_72072.JPG" alt="Rauw alejandro de pequeño">
 
     <hr>
     <h2>Primeros Años e Inicios de su Carrera</h2>
     <p>Hijo de Raúl Ocasio, guitarrista, y María Nelly Ruiz, corista, sus padres se divorciaron cuando él tenía diez años. Creció junto a su abuela, su hermana y su madre, quien trabajaba en tres empleos para mantenerlos. Esta experiencia familiar, marcada por el esfuerzo, le inculcó una fuerte ética de trabajo y la creencia de que "nadie le ha regalado nada".</p>
     <p>Desde los seis hasta los veinte años, Rauw Alejandro se dedicó al **fútbol**, incluso llegando a la Universidad de Puerto Rico con una beca y trasladándose a Orlando, Florida, con la intención de ser reclutado para la Premier Development League (PDL). Sin embargo, una lesión y la incapacidad de alcanzar el rendimiento esperado lo llevaron a dejar el deporte, lo que lo sumió en una ligera depresión. Después de considerar brevemente la actuación, se dedicó a la música, comenzando a publicar canciones en SoundCloud en 2014. Antes de su éxito, Rauw tuvo varios empleos, incluyendo camarero, barman, jardinero y dependiente en tiendas de ropa y zapatos.</p>
 
-    <img src="IMG_7212 2.JPG" alt="Rauw jugando football">
+    <img src="IMG_72122.JPG" alt="Rauw jugando football">
 
     <hr>
     <h2>Trayectoria Musical y Estilo Innovador</h2>
